<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/card_list"
    android:layout_marginBottom="12dp">

    <ImageView
        android:id="@+id/img_menu"
        android:layout_width="108dp"
        android:layout_height="94dp"
        app:layout_constraintTop_toTopOf="@id/menu_list_item"
        app:layout_constraintStart_toStartOf="@id/menu_list_item"
        android:scaleType="centerCrop"
        android:src="@drawable/img_menu1" />

    <TextView
        android:id="@+id/tv_menu_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/menu_list_item"
        app:layout_constraintStart_toEndOf="@id/img_menu"
        android:layout_marginStart="8dp"
        android:text="@string/legend_cheese_burger"
        android:textAppearance="@style/label_large_prominent"
        android:textColor="@color/black"
        android:lineSpacingExtra="2sp"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tv_menu_desc"
        style="@style/label_small"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_menu_name"
        app:layout_constraintStart_toEndOf="@id/img_menu"
        android:layout_marginStart="8dp"
        android:lineSpacingExtra="1sp"
        android:maxLines="2"
        android:text="@string/burger_sapi_dengan_saus_keju"
        android:textColor="@color/gray_normal"
        tools:ignore="TextContrastCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/tv_menu_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_menu_desc"
        app:layout_constraintStart_toEndOf="@id/img_menu"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/rp60_000"
        style="@style/label_large_prominent"/>

    <Button
        android:id="@+id/btn_add_menu"
        style="@style/button_outline"
        android:layout_width="65dp"
        android:layout_height="20dp"
        android:text="@string/tambah"
        android:textAppearance="@style/label_small"
        app:layout_constraintBottom_toBottomOf="@id/menu_list_item"
        app:layout_constraintEnd_toEndOf="@id/menu_list_item"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>